--- a/bioSite.css
+++ b/bioSite.css
@@ -1,9 +1,135 @@
-/* Parrish Ward, 9-19-21, csd-340 module 7.3 */
-#page-title {
+/* Parrish Ward - 9.29.21 - CSD 340*/
+
+html {
+    background-color:rgba(231, 231, 231, 0.233);
+    color:#6b6b6b
+}
+
+body {
+    margin: 0;
+    font-family: 'Oswald', Verdana, Arial, sans-serif;
+    text-align:center;
+    background: rgba(231, 231, 231, 0.233);
+    background-color: rgba(231, 231, 231, 0.233);;
+}
+
+
+header {
+    background-color: rgba(231, 231, 231, 0.233);
+    color: rgba(231, 231, 231, 0.233);
+    padding: 20px;
     text-align: center;
+}
+
+h1 {
+    font-weight: 400;
+    color: rgb(184, 43, 189)
+}
+
+h3, th {
+    font-weight: 300;
+    font-style: oblique;
+}
+
+h1, h2, h3, th {
+    color:rgb(184, 43, 189)
+}
+
+#navbar {
+    overflow: hidden;
+    background-color: rgba(231, 231, 231, 0.233);
+    border-bottom: 15px solid #6b6b6b;
+}
+
+#navbar a {
+    float: left;
+    display: block;
+    color: rgb(184, 43, 189);
+    text-align: center;
+    padding: 14px 16px;
+    text-decoration: none;
+}
+
+#navbar a:hover {
+    background-color: #6b6b6b;
+    color: #fff;
+}
+
+#container {
+    margin: 2% 5% 100px 5%;
+    background-color: rgba(231, 231, 231, 0.233);
+}
+
+.aboutRandi {
+    box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+    transition: 0.3s;
+    width: auto;
+    height: auto;
+    text-align: center;
+    background-color: rgba(231, 231, 231, 0.233);
+}
+
+.aboutRandi-title {
+    text-align: center;
+    font-size: 2em;
+    color: rgb(184, 43, 189);
+    font-weight: 400;
+    background-color: rgba(231, 231, 231, 0.233);
+    max-width: 300%;
+}
+
+.aboutRandi-content {
+    padding: 2px 16px;
+    height: auto;
+    width: 300px;
+    background-color: rgba(231, 231, 231, 0.233);
+}
+
+.center {
+    margin-left:auto;
+    margin-right:auto;
+}
+
+img {
+    width: 55%;
+    height: 90%;
+  }
+
+#back-to-landing {
     font-family: 'Oswald', Verdana, Arial, sans-serif;
 }
-#picture {
-    align-items: center;
-    border-width: 1px;
+
+#back-to-landing:hover {
+    text-decoration: underline;
 }
+
+#back-to-landing {
+    float: right;
+    margin-bottom: 20px;
+}
+
+footer {
+    background-color:rgba(231, 231, 231, 0.233);
+    bottom: 0;
+    width: 100%;
+
+}
+
+footer p {
+    color:rgb(184, 43, 189);
+    font-weight: 400;
+    float: left;
+    padding-right: 10px;
+    font-style: italic;
+    font-size: .75em;
+}
+
+.buttons {
+    float: right;
+    border:4px;
+    color:rgb(184, 43, 189);
+    padding: 15px 32px;
+    text-align: center;
+    text-decoration: none;
+    font-size: .75em;
+  }
